serviceA/nodejs-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-a-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-a
  template:
    metadata:
      labels:
        app: nodejs-a
    spec:
      containers:
      - name: nodejs-a
        image: nodejs-a:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  selector:
    app: nodejs-a
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
