serviceA/ingress-route-service-a.yaml
#apiVersion: traefik.containo.us/v1alpha1
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: servicea-route
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`api-gateway.com`) && PathPrefix(`/servicea`)
    #  - match: Host(`localhost`) && PathPrefix(`/servicea`)
    kind: Rule
    services:
    - name: service-a
      port: 80
